Adjusted assignment cards to a fixed size and spacing

--- a/front-end/src/components/Dashboard/InfoDisplay/Assignments/AddAssignments/assignment-form.css
+++ b/front-end/src/components/Dashboard/InfoDisplay/Assignments/AddAssignments/assignment-form.css
@@ -36,7 +36,7 @@ Button {
 
 .image-preview {
   position: absolute;
-  left: 450px;
-  width: 150px;
+  left: 235px;
+  width: 225px;
   height: 200px;
 }
